# HRC-LA

./: LICENSE  README.md  pyproject.toml
benchmarks/: benchmark.py  decomposition.py
hrc_la/: __init__.py  attention.py  utils.py
tests/: test_attention.py
tests/models/: __init__.py  common.py  test_transformer.py
tests/scenarios/common/: config.py  datasets.py  reporting.py  trainer.py  visualization.py
tests/scenarios/copy_test/: config.py  main.py  optuna_search.py  seq_len_optimizer.py
tests/scenarios/copy_test/results/: copy_task_seq4096_20260111_052546.json
tests/scenarios/needle_test/: __init__.py  datasets.py  main.py
tests/scenarios/needle_test/results/: niah_multi_depth_seq4096_20260111_051421.json
