[project]
name = "hrc-la"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "matplotlib>=3.10.8",
  "numpy>=2.4.0",
  "pytest>=9.0.2",
  "seaborn>=0.13.2",
  "torch>=2.9.1",
  "wandb>=0.23.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
